--- a/audio_player.html
+++ b/audio_player.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
-<html style="--title-color: magenta">
+<html style="--title-color: magenta" class="crt">
   <head>
     <title>Audio Player</title>
+    <style id="screenfx">
+      body {
+        transform: scale(1);
+        filter: saturate(1)
+      }
+    </style>
     <style>
       #audioFile {
         display: none;
       }
 
-      html,
-      body {
+      html {
         background-color: rgb(0, 0, 15);
         overflow: hidden;
+      }
+
+      html,
+      body {
         width: 100vw;
         height: 100vh;
         margin: 0;
         padding: 0;
         font-family: monospace;
+      }
+
+      body {
+        overflow: visible;
       }
 
       h1 {
@@ -58,7 +71,7 @@
         padding: 0;
         color: white;
         cursor: pointer;
-        text-shadow: 0px 0px 2px;
+        text-shadow: 0px 0px 3px rgba(255,255,255,0.8);
       }
 
       #playlist ol {
@@ -200,7 +213,7 @@
     />
   </head>
 
-  <body class="crt" style="--accent-color: magenta">
+  <body style="--accent-color: magenta">
     <h1 onclick="document.querySelector('#audioFile').click()">
       no file selected
     </h1>
@@ -331,6 +344,128 @@
       });
     </script>
     <script>
+      const screenFX = {
+        prevBass: null,
+        saturate: 1,
+        scale: 1,
+        scaleCooldown: 0,
+        fxCss: document.querySelector("#screenfx"),
+        fx: function fx() {
+          screenFX.saturate = (screenFX.saturate - 1) * 0.97 + 1;
+          screenFX.scale = (screenFX.scale - 1) * 0.95 + 1;
+          screenFX.fxCss.innerHTML = `
+          body {
+            transform: scale(${screenFX.scale});
+          }
+          html {
+            filter: saturate(${screenFX.saturate});
+          }
+          `;
+          setTimeout(screenFX.fx, 1 / 30);
+        }
+      }
+      screenFX.fx();
+      const crtCode = `
+      .crt::after {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: rgba(18, 16, 16, 0.1);
+        opacity: 0;
+        z-index: 2;
+        pointer-events: none;
+      }
+
+      .crt::before {
+        content: " ";
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        background: linear-gradient(
+            rgba(18, 16, 16, 0) 50%,
+            rgba(0, 0, 0, 0.25) 50%
+          ),
+          linear-gradient(
+            90deg,
+            rgba(255, 0, 0, 0.06),
+            rgba(0, 255, 0, 0.02),
+            rgba(0, 0, 255, 0.06)
+          );
+        z-index: 2;
+        background-size: 100% 2px, 3px 100%;
+        pointer-events: none;
+      }
+      `;
+      const modules = {
+        _listeners: [],
+        injectCrt: function (win) {
+          var crt = document.createElement("style");
+          crt.innerHTML = crtCode;
+          win.document.head.appendChild(crt);
+        },
+        pushData: function (data) {
+          modules._listeners.forEach(callback => {
+            //propagate data
+            callback(data);
+          });
+        },
+        volume: function (color) {
+          var volume = window.open();
+
+          var meter = document.createElement("canvas");
+          var ctx = meter.getContext("2d");
+          var content = Array(64).fill(0);
+          var songName = "";
+          var alphaRendering = 0.0;
+          modules.injectCrt(volume);
+          function resizeMeter() {
+            meter.width = volume.innerWidth;
+            meter.height = volume.innerHeight;
+          }
+          function updateMeter() {
+            //ctx.fillStyle = "rgba(0,0,0,0.51)";
+            ctx.fillStyle = "rgba(0,0,0,1)";
+            ctx.fillRect(0, 0, meter.width, meter.height);
+            ctx.fillStyle = color;
+            ctx.strokeStyle = color;
+            ctx.font = "24px monospace";
+            var padding = 5;
+            ctx.fillText(songName, padding, 24 + padding/4 + (Math.sin(Date.now()*0.0025)+1)*10);
+            alphaRendering *= 0.97;
+            for (let i = 0; i < content.length; i++) {
+              const x = i / content.length;
+              const y = 1 - Math.max(content[i], 0.01);
+              const width = volume.innerWidth / content.length;
+              //ctx.globalAlpha = 0.25 + (alphaRendering * 0.25);
+              ctx.globalAlpha = Math.max(content[i], 0.1);
+              ctx.fillRect(x * meter.width, meter.height * y, width, Math.max(content[i], 0.01) * meter.height);
+              ctx.globalAlpha = 1;
+            }
+            volume.requestAnimationFrame(updateMeter);
+          }
+          volume.addEventListener("resize", resizeMeter);
+          modules._listeners.push((data)=>{
+            songName = data.track;
+            if (Number.isFinite(data.bass)) {
+              alphaRendering += data.bass;
+            }
+            content.shift();
+            content.push(data.averageVolume / 150);
+          });
+          meter.style = 'position:fixed;top:0;left:0;background-color: rgb(0,0,15);';
+          updateMeter();
+          volume.document.documentElement.classList.add("crt");
+          volume.document.body.appendChild(meter);
+        }
+      }
+      const title = document.querySelector("h1");
       const audioFileInput = document.getElementById("audioFile");
       const playButton = document.getElementById("playButton");
       const audioContext = new (window.AudioContext ||
@@ -425,7 +560,7 @@
                     "Loop toggled to '" + loop + "'";
                 } else if (lastCommand.toLowerCase().startsWith("help")) {
                   document.querySelector("#logs").innerHTML =
-                    "[COMMANDS]<br>loop<br>speed 1.0<br>viz_smooth 0.1<br>viz_accent magenta<br>title_accent magenta<br>bass_boost 0.0";
+                    "[COMMANDS]<br>loop<br>speed 1.0<br>viz_smooth 0.1<br>viz_accent magenta<br>title_accent magenta<br>bass_boost 0.0<br>module_volume red";
                 } else if (lastCommand.toLowerCase().startsWith("speed")) {
                   playbackRate = lastCommand.toLowerCase().split(" ")[1] || 0.0;
                   document.querySelector("#logs").innerText =
@@ -468,6 +603,15 @@
                   document.querySelector(
                     "#logs"
                   ).innerText = `Bass boost set to strength ${strength}`;
+                } else if (lastCommand.toLowerCase().startsWith("module_volume")) {
+                  const parts = lastCommand.toLowerCase().split(" ");
+                  const color = parts[1] || "red";
+
+                  modules.volume(color);
+
+                  document.querySelector(
+                    "#logs"
+                  ).innerText = `Launched volume vizualizer module.`;
                 } else {
                   document.querySelector("#logs").innerText =
                     "[ERROR] Invalid command: " + lastCommand;
@@ -573,6 +717,7 @@
           averageVolume += v;
         });
         averageVolume /= dataArray.length;
+
         volumePanel.update(averageVolume / 1.5, 100);
 
         vizElems.forEach((vizElem) => {
@@ -597,6 +742,28 @@
             vizElem.setAttribute("data-val", 0.0);
           });
         }
+
+        const bassIdx = Math.round(
+          40 / binSize
+        );
+        var value = dataArray[bassIdx];
+        if (!Number.isFinite(screenFX.prevBass)) {
+          screenFX.prevBass = value || 0.01;
+        }
+        var bassOut = 0.0;
+        if (value / screenFX.prevBass > 1.006 && screenFX.scaleCooldown < 1) {
+          screenFX.scaleCooldown = 16;
+          bassOut = value / screenFX.prevBass;
+          screenFX.scale = (Math.min(1.1, 1 + 0.0125*(value / screenFX.prevBass)) - screenFX.scale) * 1 + screenFX.scale;
+        }
+
+        screenFX.scaleCooldown = Math.max(0, screenFX.scaleCooldown - 1)
+
+        screenFX.prevBass = value;
+
+        screenFX.saturate = Math.max(averageVolume / 1.5 / 60, 0.75);
+
+        modules.pushData({averageVolume: averageVolume, binSize: binSize, dataArray: dataArray, track: title.innerText, bass: bassOut});
       }
       function playNextOnPlaylist() {
         playlistIdx++;
